--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@gekojs/web",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Base GeKo genes to build web servers easily.",
   "main": "dist/index.js",
   "scripts": {
-    "lab": "nodemon lab/index.ts",
+    "lab": "npx nodemon lab/index.ts",
     "build": "tsc"
   },
   "author": {
@@ -21,11 +21,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@gekojs/core": "^1.0.1"
+    "@gekojs/core": "^1.1.0",
+    "express": "^4.21.1"
   }
 }
